new color schema

--- a/index.html
+++ b/index.html
@@ -33,551 +33,30 @@
 
 <body>
 
-	<!-- header
-   ================================================== -->
-   <header id="main-header">
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/js.cookie.min.js"></script>
 
-   	<div class="row">
+<script type="text/javascript">
 
-	      <div class="logo">
-	         <a href="index.html">QUADRO SYSTEMS</a>
-	      </div>
+$(document).ready(function(){
 
-	      <nav id="nav-wrap">
+  var lang = Cookies.get('lang');
 
-	         <a class="mobile-btn" href="#nav-wrap" title="Show navigation">
-	         	<span class="menu-icon">Menu</span>
-	         </a>
-         	<a class="mobile-btn" href="#" title="Hide navigation">
-         		<span class="menu-icon">Menu</span>
-         	</a>
+  if (typeof lang === 'undefined' || lang === null || lang === 'undefined') {
+    lang = 'ru';
+    Cookies.set('lang', lang);
+  }
 
-	         <ul id="nav" class="nav">
-	            <li><a class="smoothscroll" href="#hero"><i class="fa fa-home"></i></a></li>
-                <li class="current"><a class="smoothscroll" href="#about">О НАС</a></li>
-	            <li><a class="smoothscroll" href="#services">УСЛУГИ</a></li>
-	            <li><a class="smoothscroll" href="#expertise">ТЕХНОЛОГИИ</a></li>
-                <li><a class="smoothscroll" href="#clients">НАМ ДОВЕРЯЮТ</a></li>
-	            <li><a class="smoothscroll" href="#contact">КОНТАКТЫ</a></li>
-	         </ul> <!-- end #nav -->
+  if (lang == 'ru') {
+    window.location.href = 'ru.html';
+  }
+  else {
+    window.location.href = 'en.html';
+  }
 
-	      </nav> <!-- end #nav-wrap -->
+});
 
-	   </div>
-
-   </header> <!-- end header -->
-
-
-   <!-- homepage hero
-   ================================================== -->
-   <section id="hero">
-
-		<div class="row hero-content">
-
-			<div class="twelve columns hero-container">
-
-			   <!-- hero-slider start-->
-			   <div id="hero-slider" class="flexslider">
-
-				   <ul class="slides">
-
-					   <!-- slide -->
-					   <li>
-						   <div class="flex-caption">
-								<h1 class="">Эффективные решения для Вашего бизнеса</h1>
-								<h3 class="">Мы предоставляем широкий спектр услуг по проектированию, разработке и поддержке корпоративных информационных систем. Наша цель - обеспечить Вас надежным и удобным инструментом, который поможет сделать работу Ваших сотрудников более продуктивной, а Ваш бизнес более доходным и конкурентным.</h3>
-							</div>
-					   </li>
-
-				   </ul>
-
-			   </div> <!-- end hero-slider -->
-
-	      </div> <!-- end twelve columns-->
-
-		</div> <!-- end row -->
-
-		<div id="more">
-		      <a class="smoothscroll" href="#services">Наши услуги<i class="fa fa-angle-down"></i></a>
-		</div>
-
-   </section> <!-- end homepage hero -->
-
-    <!-- About Section
-    ================================================== -->
-    <section id="about">
-
-    <div class="row section-head">
-
-        <div class="twelve columns">
-
-            <h1>О НАС</h1>
-
-            <hr />
-
-            <p>Компания Quadro Systems оказывает услуги проектирования, разработки и сопровождения программного обеспечения для корпоративного рынка. Компания была основана в 2011 году группой ИТ профессионалов с многолетним опытом. Центр разработки компании находится в городе Ташкент, Узбекистан.
-            </p>
-
-        </div> <!-- end section-head -->
-
-        <div class="twelve columns">
-            <p>В своей работе мы руководствуемся следующими принципами, которые помогают достигать наших целей:</p>
-        </div>
-
-    </div>
-
-    <div class="row mobile-no-padding">
-
-        <div class="process bgrid-half tab-bgrid-whole group">
-
-            <div class="bgrid">
-
-                <h3>Партнерские отношения с клиентами</h3>
-
-                <p>Мы прилагаем все усилия, чтобы заслужить доверие наших клиентов и стать их долгосрочными партнерами.
-                    Мы тщательно изучаем их потребности и находим к каждому индивидуальный подход. Мы всегда стараемся
-                    сделать максимум и даже немного больше для наших партнеров, так как наш успех зависит от их успехов.</p>
-
-            </div>
-
-            <div class="bgrid">
-
-                <h3>Профессиональная этика</h3>
-
-                <p>Мы выполняем взятые на себя обязательства в полном объеме, соблюдаем законы и этические нормы ведения бизнеса.</p>
-
-            </div>
-
-            <div class="bgrid">
-
-                <h3>Качество</h3>
-
-                <p>Качество наших услуг – это наша репутация и визитная карточка. Мы делаем все возможное, чтобы качество
-                    предоставляемых нами услуг всегда было на уровне международных стандартов.</p>
-
-            </div>
-
-            <div class="bgrid">
-
-                <h3>Устойчивое развитие</h3>
-
-                <p>Мы заботимся об условиях работы и профессиональном росте наших сотрудников. В компании налажена
-                    программа обучения, которая позволяет сотрудникам постоянно самосовершенствоваться и повышать качество своей работы.</p>
-
-            </div>
-
-        </div> <!-- end process -->
-
-    </div> <!-- end row -->
-
-    </section> <!-- end about -->
-
-
-    <!-- Services Section
-    ================================================== -->
-   <section id="services">
-
-   	<div class="row section-head">
-
-      	<div class="twelve columns">
-
-      		<h1>УСЛУГИ</h1>
-
-	         <hr />
-
-	         <p>Мы предоставляем широкий спектр услуг от консалтинга до проектирования, разработки и технического
-                 сопровождения программных комплексов.</p>
-
-	      </div>
-
-      </div> <!-- end section-head -->
-
-      <div class="row mobile-no-padding">
-
-	      <div class="service-list bgrid-half tab-bgrid-whole group">
-
-	      	<div class="bgrid">
-
-	            <h3>Разработка программного обеспечения</h3>
-
-	            <div class="service-content">
-		            <p>Quadro Systems предоставляет полный цикл услуг по разработке программного обеспечения. Мы работаем
-                        в тесном сотрудничестве с нашими клиентами на всех этапах реализации проекта - анализ требований
-                        и планирование проекта, создание проектной документации, проектирование и прототипирование,
-                        разработка, тестирование, внедрение и сопровождение конечного продукта. В результате этой
-                        кооперации наши клиенты получают эффективное и надежное программное обеспечение, полностью
-                        отвечающее их запросам и ожиданиям.</p>
-	         	</div>
-
-				</div> <!-- end bgrid -->
-
-				<div class="bgrid">
-
-	            <h3>Техническое сопровождение</h3>
-
-	            <div class="service-content">
-		            <p>Наши клиенты инвестируют усилия и средства в программные решения для своих бизнес задач.
-                        Предоставляя услуги по техническому сопровождению этих решений, мы помогаем защитить эти
-                        инвестиции. Мы делаем все, чтобы обеспечить надежную и бесперебойную работу программных
-                        комплексов наших клиентов, что позволяет снизить затраты на их владение, повышает
-                        производительность и отдачу от вложенных средств. Для достижения этих целей мы проводим
-                        постоянный мониторинг работоспособности сопровождаемых продуктов, своевременно решаем возникающие
-                        аварийные ситуации, анализируем причины, которые могут привести к этим ситуациям и оптимизируем
-                        программный код для предотвращения их возникновения в будущем.</p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-			   <div class="bgrid">
-
-	            <h3>Системная интеграция</h3>
-
-	            <div class="service-content">
-		            <p>ИТ инфраструктура корпоративных клиентов может состоять из множества разнородных программных
-                        решений. Обеспечение их взаимодействия порой представляет собой нетривиальную задачу.
-                        Quadro Systems предлагает свои услуги по интеграции информационных систем для различных
-                        сценариев – интеграция на уровне бэкэндов, интеграция на уровне данных, интеграция с помощью
-                        вэб-сервисов или API.  </p>
-	            </div>
-
-			   </div> <!-- end bgrid -->
-
-				<div class="bgrid">
-
-	            <h3>ИТ-Консалтинг</h3>
-
-	            <div class="service-content">
-		            <p>Развитие ИТ технологий породило огромный выбор платформ, продуктов, методик и подходов для решений
-                        различных бизнес задач. Компании, которые инвестируют в подходящие технологии, получают
-                        конкурентное преимущество и стимулируют развитие своего бизнеса. Но как сделать правильный
-                        выбор? Quadro Systems, опираясь на свой  опыт, знания и анализ бизнес процессов предоставляет
-                        консалтинговые услуги по выбору оптимальных ИТ технологий и решений для своих клиентов.</p>
-	            </div>
-
-				</div> <!-- end bgrid -->
-
-	      </div> <!-- end service-list -->
-
-      </div> <!-- end row -->
-
-   </section> <!-- end services -->
-
-
-   <!-- Expertise Section
-   ================================================== -->
-   <section id="expertise">
-
-       <div class="row section-head">
-
-           <div class="twelve columns">
-
-               <h1>ЗНАНИЯ И ОПЫТ</h1>
-
-               <hr />
-
-               <p>Наш опыт, технологии и наработки являются мощным фундаментом, на котором мы строим свой бизнес.
-                   Это надежная база из сплава технологической компетенции и знаний предметной области в различных отраслях,
-                   которая позволяет нам предоставлять эффективные и рентабельные услуги и решения нашим клиентам.
-               </p>
-
-           </div> <!-- end section-head -->
-
-       </div>
-
-       <div class="row section-head">
-
-           <div class="twelve columns">
-
-               <h5>НАША СПЕЦИАЛИЗАЦИЯ</h5>
-
-           </div> <!-- end section-head -->
-
-       </div>
-
-       <div class="row mobile-no-padding">
-
-           <div class="process bgrid-half tab-bgrid-whole group">
-
-               <div class="bgrid">
-
-                   <h3>Корпоративные решения</h3>
-                   <ul>
-                       <li>Информационные системы для предприятий</li>
-                       <li>B2B и B2C вэб-порталы</li>
-                       <li>Бизнес-аналитика</li>
-                       <li>Отчетность</li>
-                   </ul>
-
-               </div>
-
-               <div class="bgrid">
-
-                   <h3>Базы данных</h3>
-                   <ul>
-                       <li>Проектирование баз данных</li>
-                       <li>Управление данными</li>
-                       <li>Миграция данных</li>
-                       <li>Оптимизация производительности</li>
-                   </ul>
-
-               </div>
-
-               <div class="bgrid">
-
-                   <h3>Backend разработка</h3>
-                   <ul>
-                       <li>Архитектура и проектирование API</li>
-                       <li>Вэб-сервисы</li>
-                       <li>Хранение данных и их синхронизация</li>
-                       <li>Безопасность и управление идентификацией</li>
-                   </ul>
-
-               </div>
-
-               <div class="bgrid">
-
-                   <h3>Frontend разработка</h3>
-                   <ul>
-                       <li>Разработка отзывчивых веб-сайтов</li>
-                       <li>Системы управления контентом</li>
-                       <li>Кросс-платформенная разработка мобильных приложений</li>
-                   </ul>
-
-               </div>
-
-           </div> <!-- end process -->
-
-       </div> <!-- end row -->
-
-       <div class="row section-head">
-
-           <div class="twelve columns">
-
-               <h5>СФЕРЫ БИЗНЕСА</h5>
-
-               <p>Залог нашего успеха в том, что мы говорим на одном языке с нашими клиентами. В этом нам помогает опыт
-                   и знания предметной области, приобретенные в процессе реализации проектов для разных отраслей бизнеса. </p>
-
-           </div> <!-- end section-head -->
-
-       </div>
-
-       <div class="row mobile-no-padding">
-
-           <div class="process bgrid-half tab-bgrid-whole group">
-
-               <div class="bgrid">
-
-                   <ul>
-                       <li>Промышленность</li>
-                       <li>Телекоммуникации</li>
-                       <li>Банки и финансы</li>
-                       <li>Информационные технологии</li>
-                   </ul>
-
-               </div>
-
-           </div> <!-- end process -->
-
-       </div> <!-- end row -->
-
-       <div class="row section-head">
-
-           <div class="twelve columns">
-
-               <h5>ТЕХНОЛОГИИ</h5>
-
-               <p>Выбор оптимальных технологий является ключевым фактором для предоставления надежных и продуктивных
-                   решений. Наши специалисты обладают обширным арсеналом знаний и навыков, который позволяет нам с
-                   минимальными затратами и в срок создавать программные продукты, которые отвечают всем требованиям
-                   заказчика. </p>
-
-           </div> <!-- end section-head -->
-
-       </div>
-
-       <div class="row mobile-no-padding">
-
-           <div class="process bgrid-third tab-bgrid-whole group">
-
-               <div class="bgrid">
-
-                   <ul>
-                       <li>.NET</li>
-                       <li>Java</li>
-                       <li>PHP</li>
-                       <li>Javascript</li>
-                       <li>HTML5/CSS3</li>
-                   </ul>
-
-               </div>
-
-               <div class="bgrid">
-
-                   <ul>
-                       <li>Oracle</li>
-                       <li>MS SQL</li>
-                       <li>DB2</li>
-                       <li>PostgreSQL</li>
-                       <li>MySQL</li>
-                       <li>SQLite</li>
-                   </ul>
-
-               </div>
-
-               <div class="bgrid">
-
-                   <ul>
-                       <li>Microsoft Windows</li>
-                       <li>Linux</li>
-                   </ul>
-
-               </div>
-
-           </div> <!-- end process -->
-
-       </div> <!-- end row -->
-
-   </section> <!-- end expertise section -->
-
-
-    <!-- Clients Section
-    ================================================== -->
-    <section id="clients">
-
-        <div class="row section-head">
-
-            <div class="twelve columns">
-
-                <h1>НАМ ДОВЕРЯЮТ</h1>
-
-                <hr />
-
-                <p>&nbsp;</p>
-
-            </div> <!-- end section-head -->
-
-        </div>
-
-    </section> <!-- end clients section -->
-
-
-    <!-- contact
-    ================================================== -->
-   <section id="contact">
-
-   	<div class="row section-head">
-
-   		<div class="twelve columns">
-
-	         <h1>КОНТАКТЫ</h1>
-
-	         <hr />
-
-            <p>Желаете задать вопрос или узнать о нас больше? Пожалуйста, заполните форму и отправьте свой запрос -
-                наши сотрудники свяжутся с Вами в ближайшее время </p>
-
-	      </div>
-
-      </div> <!-- end section-head -->
-
-      <div class="row">
-
-      	<div id="contact-form" class="six columns tab-whole left">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action=""  >
-      			<fieldset>
-
-                  <div class="group">
- 						   <input name="contactName" type="text" id="contactName" placeholder="Имя" value="" minLength="2" required />
-                  </div>
-                  <div>
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required />
-	               </div>
-                    <div>
-                        <input name="contactPhone" type="text" id="contactPhone" placeholder="Номер телефона" value="" required />
-                    </div>
-                  <div>
-	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Тема"  value="" />
-	               </div>
-                  <div>
-	                 	<textarea name="contactMessage"  id="contactMessage" placeholder="Сообщение" rows="10" cols="50" required ></textarea>
-	               </div>
-                  <div>
-                     <button class="submitform">Отправить сообщение</button>
-                     <div id="submit-loader">
-                        <div class="text-loader">Отправка...</div>
-       				      <div class="s-loader">
-								  	<div class="bounce1"></div>
-								  	<div class="bounce2"></div>
-								  	<div class="bounce3"></div>
-								</div>
-							</div>
-                  </div>
-
-      			</fieldset>
-      		</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning"></div>
-            <!-- contact-success -->
-      		<div id="message-success">
-               <i class="icon-ok"></i>Ваше сообщение отправлено!<br />
-      		</div>
-
-         </div>
-
-         <div class="six columns tab-whole right">
-
-	         <h3 class="address">Наш офис:</h3>
-
-	         <p><i class="fa fa-home mr_15"></i>Узбекистан, г.Ташкент, ул. А. Тимура, 25</p>
-
-            <h3>Наши контакты:</h3>
-             <p><i class="fa fa-phone mr_15"></i>+998 93 397 36 90</p>
-             <p><i class="fa fa-envelope mr_15"></i><a href="mailto:info@quadrosystems.com">info@quadrosystems.com</a></p>
-
-         </div>
-
-      </div> <!-- end row -->
-
-   </section>  <!-- end contact -->
-
-
-   <!-- Footer
-   ================================================== -->
-   <footer>
-
-      <div class="row">
-
-         <ul class="copyright">
-         	<li>&copy; 2016. Quadro Systems</li>
-         </ul>
-
-         <div id="go-top">
-            <a class="smoothscroll" title="К началу" href="#hero">К началу<i class="fa fa-angle-up"></i></a>
-         </div>
-
-      </div> <!-- end row -->
-
-   </footer> <!-- end footer -->
-
-   <div id="preloader">
-    	<div id="loader"></div>
-   </div>
-
-   <!-- Java Script
-   ================================================== -->
-   <script src="js/jquery-1.11.3.min.js"></script>
-   <script src="js/jquery-migrate-1.2.1.min.js"></script>
-   <script src="js/jquery.flexslider-min.js"></script>
-   <script src="js/jquery.waypoints.min.js"></script>
-   <script src="js/jquery.validate.min.js"></script>
-   <script src="js/jquery.fittext.js"></script>
-   <script src="js/jquery.placeholder.min.js"></script>
-   <script src="js/jquery.magnific-popup.min.js"></script>
-   <script src="js/main.js"></script>
+</script>
 
 </body>
 
