--- a/index.html
+++ b/index.html
@@ -1,63 +1,1 @@
-<!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-
-   <!--- basic page needs
-   ================================================== -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Quadro Systems</title>
-    <meta name="description" content="Quadro Systems Web Site" />
-
-   <!-- mobile specific metas
-   ================================================== -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
- 	<!-- CSS
-   ================================================== -->
-   <link rel="stylesheet" href="css/base.css">
-   <link rel="stylesheet" href="css/vendor.min.css">
-   <link rel="stylesheet" href="css/main.css">
-
-   <!-- script
-   ================================================== -->
-	<script src="js/modernizr.js"></script>
-
-   <!-- favicons
-	================================================== -->
-	<link rel="shortcut icon" href="favicon.png" >
-
-</head>
-
-<body>
-
-<script src="js/jquery-1.11.3.min.js"></script>
-<script src="js/js.cookie.min.js"></script>
-
-<script type="text/javascript">
-
-$(document).ready(function(){
-
-  var lang = Cookies.get('lang');
-
-  if (typeof lang === 'undefined' || lang === null || lang === 'undefined') {
-    lang = 'ru';
-    Cookies.set('lang', lang);
-  }
-
-  if (lang == 'ru') {
-    window.location.href = 'ru.html';
-  }
-  else {
-    window.location.href = 'en.html';
-  }
-
-});
-
-</script>
-
-</body>
-
-</html>
+<!DOCTYPE html><html class="no-js" lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Quadro Systems</title><meta name="description" content="Quadro Systems Web Site" /><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link rel="stylesheet" href="css/qs.min.css"><script src="js/modernizr.js"></script><script src="js/qs.lang.min.js"></script><link rel="shortcut icon" href="favicon.png" ></head><body onload="redirectToLangSpecificPage()"></body></html>
